// 版本设定
syntax = "proto3";

// protobuf生成的Java代码 一个源文件还是多个源文件
option java_multiple_files = false;

// 指定protobuf生成的类放在哪个包里面
option java_package = "com.study";

// 指定protobuf生成的外部类名称
option java_outer_classname = "HelloProto";

message HelloRequest {
  string name = 1;
}

message HelloRespone {
  string result = 1;
}

// 服务
service HelloService {
  // 接口
  rpc hello(HelloRequest) returns(HelloRespone){}
}

